test/libsolidity/syntaxTests/constructor/constructor_without_implementation.sol
contract C {
	constructor();
}
// ----
// TypeError 5700: (14-28): Constructor must be implemented if declared.
